--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 110vh;
   margin-top: 3rem;
   margin-bottom: 5rem;
 }
@@ -95,12 +94,12 @@ input:checked + .slider:before {
 .greyscale {
   filter: grayscale(100%);
 }
+
 #photoContainer {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 16px;
   max-width: 750px;
-  height: 616px;
   position: relative;
 }
 .photo-item {
@@ -159,8 +158,8 @@ img {
   border-radius: 4px;
   font-size: 16px;
   cursor: pointer;
-  position: fixed;
-  display: none; /*hide the button initially*/
+  position: relative;
+  margin-top: 2rem;
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
