Final commit, fixed overlay in image to be pixel perfect

--- a/style.css
+++ b/style.css
@@ -186,6 +186,7 @@ img {
   padding: 1rem;
   box-sizing: border-box;
   font-family: "Open Sans";
+  transform: translateY(-6%);
 }
 
 .small-text {
